<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:sky="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/activity_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/lightgray"
        android:gravity="center"
        android:paddingLeft="@dimen/padding_64"
        android:paddingRight="@dimen/padding_64">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize">

            <TextView
                android:id="@+id/tv001"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingRight="@dimen/padding_4"
                android:text="所属区域"
                android:textSize="@dimen/medium" />

            <TextView
                android:id="@+id/tv_card"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv001"
                android:layout_alignTop="@id/tv001"
                android:layout_toRightOf="@id/tv001"
                android:background="@color/white"
                android:gravity="center"
                android:padding="@dimen/padding_4" />


            <ImageView
                android:id="@id/img_01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/tv001"
                android:layout_alignTop="@id/tv001"
                android:layout_toRightOf="@id/tv_card"
                android:background="@color/black"
                android:src="@mipmap/ic_menu_trangle_down" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/lightgray"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/padding_64"
        android:paddingRight="@dimen/padding_64">

        <Button
            android:id="@+id/bt_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/margin_8"
            android:layout_weight="1"
            android:background="@mipmap/ic_soil_normal"
            android:text="@string/lable_11" />

        <Button
            android:id="@+id/bt_water"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_8"
            android:layout_weight="1"
            android:background="@mipmap/ic_soil_normal"
            android:text="@string/lable_12" />
    </LinearLayout>

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/darkgray"
        android:orientation="horizontal"
        sky:divider="@drawable/action_line_v"
        sky:showDividers="middle">

        <TextView
            style="@style/list_style"
            android:text="@string/list_01" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:orientation="vertical"
            sky:divider="@drawable/action_line_v"
            sky:showDividers="middle">

            <TextView
                android:id="@+id/tv_temporwater"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/list_10"
                android:textSize="@dimen/small" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                sky:divider="@drawable/action_line_v"
                sky:showDividers="middle">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/list_12"
                    android:textSize="@dimen/small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/list_13"
                    android:textSize="@dimen/small" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/list_14"
                    android:textSize="@dimen/small" />

            </android.support.v7.widget.LinearLayoutCompat>
        </android.support.v7.widget.LinearLayoutCompat>

        <TextView
            style="@style/list_style"
            android:text="@string/list_09" />

    </android.support.v7.widget.LinearLayoutCompat>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.sky.water.ui.widget.MyRecycleView
            android:id="@id/recycle"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>