<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@mipmap/register"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_32"
                android:background="@mipmap/ic_logo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_32"
            android:background="@drawable/back_bg"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_16">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:gravity="center"
                android:padding="@dimen/padding_4"
                android:text="新用户注册"
                android:textColor="@color/white"
                android:textSize="@dimen/medium" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="horizontal">

                <TextView
                    style="@style/register_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/register_realname" />

                <EditText
                    android:id="@+id/et_real"
                    style="@style/register_style" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_xing"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <TextView
                    style="@style/register_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/register_card" />

                <EditText
                    android:id="@+id/tv_card"
                    style="@style/register_style"
                    android:inputType="number" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_xing"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <TextView
                    style="@style/register_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/register_name" />

                <EditText
                    android:id="@+id/et_nick"
                    style="@style/register_style" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_xing"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <TextView
                    style="@style/register_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/register_setpass" />

                <EditText
                    android:id="@+id/et_pass1"
                    style="@style/register_style"
                    android:inputType="textPassword" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_xing"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <TextView
                    style="@style/register_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/register_surepass" />

                <EditText
                    android:id="@+id/et_pass2"
                    style="@style/register_style"
                    android:inputType="textPassword" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_xing"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <TextView
                    style="@style/register_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/register_xiangzhen" />

                <TextView
                    android:id="@+id/et_xiangzhen"
                    style="@style/register_style"
                    android:drawableRight="@mipmap/ic_menu_trangle_down" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_xing"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    style="@style/register_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/register_cunzhuang" />

                <TextView
                    android:id="@+id/et_cunzhuang"
                    style="@style/register_style"
                    android:drawableRight="@mipmap/ic_menu_trangle_down" />/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_xing"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:orientation="horizontal">

                <TextView
                    style="@style/register_text_style"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="@dimen/activity_horizontal_margin"
                    android:text="@string/register_phone" />

                <EditText
                    android:id="@+id/et_phone"
                    style="@style/register_style" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:background="@mipmap/ic_xing"
                    android:inputType="number"
                    android:visibility="visible" />

            </LinearLayout>

            <Button
                android:id="@+id/bt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/margin_32"
                android:layout_marginTop="@dimen/margin_8"
                android:background="@mipmap/bt_regist"
                android:text="@string/register"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>